@@ -1,6 +1,7 @@
 0.1678
     - DBIx::Custom::Model filter attribute can receive hash reference
-    - DBIx::Custom::Where clause attribute can receive clause without column name.
+    - DBIx::Custom::Where clause attribute can receive clause without column name
+    - improved error messages
 0.1677
     - improved table search in column and join clause
     - DEPRECATED table tag. use table option.
